[tool.poetry]
name = "powershap"
version = "0.0.8"
description = "Feature selection using statistical significance of shap values"
authors = ["Jarne Verhaeghe, Jeroen Van Der Donckt"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/predict-idlab/powershap"
keywords = ["feature selection", "shap", "data-science", "machine learning"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
catboost = "^1.0.5"
statsmodels = "^0.13.2"
numpy = "^1.21"
pandas = "^1.3"
shap = "^0.40"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
tensorflow = "^2.8.0"
lightgbm = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
