[tool.poetry]
name = "powershap"
version = "0.0.11"
description = "Feature selection using statistical significance of shap values"
authors = ["Jarne Verhaeghe, Jeroen Van Der Donckt"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/predict-idlab/powershap"
keywords = ["feature selection", "shap", "data-science", "machine learning"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"  
catboost = "^1.0.5"
statsmodels = "^0.13.2"
pandas = ">=1.3"
shap = "^0.45.0"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
tensorflow = [
    { version = "<2.16.0", python = "<3.12"}
    # support 3.12 when shap support tf 2.16 - https://github.com/shap/shap/issues/3562
]
lightgbm = "^3.3.2"
xgboost = "^1.6.0"
black = "^22.12.0"
isort = "^5.11.4"
ruff = "^0.0.219"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

## Formatting configuration

# Linting
[tool.ruff]
line-length = 100
extend-select = ["Q"]
ignore = ["E402", "F403", "F811", "F401"]

# Formatting
[tool.black]
color = true
line-length = 100
skip-string-normalization = true
skip-magic-trailing-comma = true

# Sort imports
[tool.isort]
line_length = 100
known_first_party = ["tsdownsample"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = false
skip = "tests/toml_test.py"
